fixed alignment of checkbox and label

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ div {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   width: calc(100% - 40px);
 }
 
